# yolov3-ros_service_tx2

./: README.md
demo_client/: CMakeLists.txt  package.xml
demo_client/src/: main.cpp
detect_proc/: CMakeLists.txt  package.xml
detect_proc/srv/: obj_detect.srv
detect_server/: CMakeLists.txt  README.md  package.xml
detect_server/cfg/: test.cfg  voc.data  voc.name
detect_server/include/: darknet.h  ros_params.hpp
detect_server/launch/: obj_detect_server.launch
detect_server/libs/darknet/: Makefile
detect_server/libs/darknet/include/: darknet.h
detect_server/libs/darknet/src/: data.c  option_list.c  option_list.h  parser.c
detect_server/src/: main.cpp
